@@ -30,6 +30,7 @@ public class DecimalInput extends TextInput
 {
   private DecimalFormat format = (DecimalFormat) DecimalFormat.getInstance(Application.getConfig().getLocale());
   private Number value = null;
+  private Control control = null;
   
   /**
    * Erzeugt ein neues Eingabefeld ohne vorgegebenen Wert.
@@ -47,7 +48,7 @@ public class DecimalInput extends TextInput
    */
   public DecimalInput(double d, DecimalFormat format)
   {
-    this(Double.isNaN(d) ? null : new Double(d),format);
+    this((Double.isNaN(d) ? null : Double.valueOf(d)), format);
   }
 
   /**
@@ -89,7 +90,10 @@ public class DecimalInput extends TextInput
   @Override
   public Control getControl()
   {
-		Control c = super.getControl();
+    if (this.control != null)
+      return this.control;
+    
+		this.control = super.getControl();
     try
     {
       text.setText(this.value == null ? "" : format.format(this.value));
@@ -138,7 +142,7 @@ public class DecimalInput extends TextInput
         }
       }
      });
-    return c;
+    return this.control;
   }
 
   /**
@@ -149,7 +153,7 @@ public class DecimalInput extends TextInput
   public Object getValue()
   {
     Number n = this.getNumber();
-    return n == null ? null : new Double(n.doubleValue());
+    return n == null ? null : Double.valueOf(n.doubleValue());
   }
   
   /**
